# dso

./: .gitignore  CMakeLists.txt  cmdline.txt
cmake/: FindLibZip.cmake
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemOptimize.cpp  HessianBlocks.h  ImmaturePoint.cpp  Residuals.h
src/IOWrapper/: Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h
src/util/: DatasetReader.h  IndexThreadReduce.h
